Optimize mobile experience: prevent scrolling, disable iOS zoom, update favicon

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout title="From Thomas - Personal Website">
-  <div class="min-h-screen relative">
+  <div class="h-screen h-[100dvh] relative overflow-hidden">
     <!-- Background gradient overlay -->
     <div 
       id="bg-gradient"
@@ -12,7 +12,7 @@ import Layout from '../layouts/Layout.astro';
     ></div>
     
     <!-- Content -->
-    <div class="relative z-10 min-h-screen flex items-center justify-center">
+    <div class="relative z-10 h-full flex items-center justify-center">
       <div class="text-center">
         <!-- Number Pad -->
         <div class="space-y-6">
